--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
 beautifulsoup4==4.6.0
-pdfminer.six
-sklearn
+chardet==3.0.4
+numpy==1.14.2
+pandas==0.22.0
+pdfminer.six==20170720
+pycryptodome==3.5.1
+python-dateutil==2.7.2
+pytz==2018.3
+scikit-learn==0.19.1
+scipy==1.0.1
+six==1.11.0
+sklearn==0.0
+termcolor==1.1.0
