--- a/backend/.chalice/config.json
+++ b/backend/.chalice/config.json
@@ -1,6 +1,7 @@
 {
   "version": "2.0",
   "app_name": "parseBankStatement",
+  "lambda_memory_size": 1024,
   "stages": {
     "dev": {
       "api_gateway_stage": "api"
