--- a/backend/.chalice/config.json
+++ b/backend/.chalice/config.json
@@ -4,7 +4,16 @@
   "lambda_memory_size": 1024,
   "stages": {
     "dev": {
-      "api_gateway_stage": "api"
+      "api_gateway_stage": "api",
+      "environment_variables": {
+        "ENV": "dev"
+      }
+    },
+    "prod": {
+      "api_gateway_stage": "api",
+      "environment_variables": {
+        "ENV": "prod"
+      }
     }
   }
 }
