--- a/backend/.chalice/config.json
+++ b/backend/.chalice/config.json
@@ -4,7 +4,20 @@
   "lambda_memory_size": 1024,
   "stages": {
     "dev": {
-      "api_gateway_stage": "api"
+      "api_gateway_stage": "api",
+      "environment_variables": {
+        "ENV": "dev",
+        "AUTH_ARN": "arn:aws:cognito-idp:ap-southeast-1:674060739848:userpool/ap-southeast-1_DtDvWZFmc",
+        "AUTH_POOL_NAME": "MoneyCat"
+      }
+    },
+    "prod": {
+      "api_gateway_stage": "api",
+      "environment_variables": {
+        "ENV": "prod",
+        "AUTH_ARN": "arn:aws:cognito-idp:ap-southeast-1:674060739848:userpool/ap-southeast-1_5ft6WxIrG",
+        "AUTH_POOL_NAME": "moneycat-prod"
+      }
     }
   }
 }
