Do not build master branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,6 @@ before_install:
   -in parsing_fixtures.tar.enc -out parsing/data/parsing_fixtures.tar -d
 - openssl aes-256-cbc -K $encrypted_2078d2dbf730_key -iv $encrypted_2078d2dbf730_iv
   -in backend_fixtures.tar.enc -out backend/test/data/backend_fixtures.tar -d
+branches:
+  except:
+  - master
