--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,6 @@ branches:
   except:
   - master
 before_install:
+- sudo apt-get install -y poppler-utils
 - openssl aes-256-cbc -K $encrypted_2078d2dbf730_key -iv $encrypted_2078d2dbf730_iv -in fixtures.tar.enc -out fixtures.tar -d
 - tar xvf fixtures.tar
